refactor: standardize project structure and enhance MetaD logic
- Standardize project code layout and CMake build system\n- Update 1D Gaussian deposition and bias force logic\n- Fix logic errors in CVs_DISTANCE\n- Confirm enhanced sampling and potential estimation\n- Update test cases with custom potentials for better observation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,43 +1,57 @@
 cmake_minimum_required(VERSION 3.10)
-project(fix_crystallize_plugin LANGUAGES CXX CUDA)  # 声明支持 C++ 和 CUDA [3,6](@ref)
+project(fix_crystallize_plugin LANGUAGES CXX CUDA)
 
-# 设置 C++ 和 CUDA 标准
+# -------------------------------------------------------------------
+# 1. 路径配置（通过环境变量获取，不再硬编码）
+# -------------------------------------------------------------------
+# 使用 "$ENV{变量名}" 获取本地环境，如果环境没设置则报错
+if(NOT DEFINED ENV{LAMMPS_SOURCE_DIR})
+    message(FATAL_ERROR "请先设置环境变量: export LAMMPS_SOURCE_DIR=/path/to/lammps/src")
+endif()
+
+set(LAMMPS_SOURCE_DIR $ENV{LAMMPS_SOURCE_DIR})
+set(MPI_INCLUDE_PATH  $ENV{MPI_HOME}/include) 
+
+# -------------------------------------------------------------------
+# 2. 编译器与标准设置
+# -------------------------------------------------------------------
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CUDA_STANDARD 11)
 set(CMAKE_CUDA_STANDARD_REQUIRED ON)
 
-set(CMAKE_CUDA_COMPILER "/usr/local/cuda/bin/nvcc")
-set(CMAKE_C_COMPILER   /home/excelsior/apps/deepmd/3.0.0/bin/mpicc)
-set(CMAKE_CXX_COMPILER /home/excelsior/apps/deepmd/3.0.0/bin/mpicxx)
-set(CLEAN_HOST_COMPILER "/home/excelsior/apps/gcc/9.5.0/bin/g++")
-
-# ABI=1
+# ABI 设置
 set(ABI_DEFINITION -D_GLIBCXX_USE_CXX11_ABI=1)
-#set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} --host-compiler=${CLEAN_HOST_COMPILER}")
-#target_compile_options(fix_crystallize_plugin PRIVATE ${ABI_DEFINITION})
-#set(CMAKE_CUDA_HOST_COMPILER "${CLEAN_HOST_COMPILER} -ccbin ${CLEAN_HOST_COMPILER}")
-set(CUDA_NVCC_FLAGS -ccbin ${CLEAN_HOST_COMPILER})
 
-# 设置LAMMPS源码路径（需修改为实际路径）
-set(MPI_CXX_INCLUDE_PATH /home/excelsior/apps/deepmd/3.0.0/include)
-set(LAMMPS_SOURCE_DIR /home/excelsior/apps/_compile/lammps-29Aug2024/src/)
-
-# 包含LAMMPS头文件
+# -------------------------------------------------------------------
+# 3. 包含路径与库
+# -------------------------------------------------------------------
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
 include_directories(${LAMMPS_SOURCE_DIR})
-include_directories(${MPI_CXX_INCLUDE_PATH})
-link_directories(/home/excelsior/apps/deepmd/3.0.0/lib/)
-# link_directories(/home/excelsior/apps/lammps/29Aug2024/lib64/)
+include_directories(${MPI_INCLUDE_PATH})
 
-# 编译插件为动态库
-add_library(fix_crystallize_plugin MODULE 
-                                         fix_crystallize.cu
-                                         CVs_DISTANCE.cu
-                                         CVs_Steinhardt.cu)
+# -------------------------------------------------------------------
+# 4. 自动识别源文件
+# -------------------------------------------------------------------
+# 自动寻找 src 目录下的所有 cu 文件，方便未来扩展 CV
+file(GLOB_RECURSE SOURCES "src/*.cu")
+
+# -------------------------------------------------------------------
+# 5. 编译目标
+# -------------------------------------------------------------------
+find_library(LAMMPS_LIB lammps PATHS ${LAMMPS_LIB_DIR} NO_DEFAULT_PATH)
+add_library(fix_crystallize_plugin MODULE ${SOURCES})
+if(LAMMPS_LIB)
+    message(STATUS "linking lammps lib path is: ${LAMMPS_LIB}")
+    target_link_libraries(fix_crystallize_plugin PRIVATE ${LAMMPS_LIB})
+else()
+    message(FATAL_ERROR "cannot find liblammps.so, please check LAMMPS_LIB_DIR")
+endif()
+
 target_compile_options(fix_crystallize_plugin PRIVATE ${ABI_DEFINITION})
-#target_link_libraries(fix_crystallize_plugin PRIVATE lammps)
-target_link_libraries(fix_crystallize_plugin PRIVATE lammps)
 
-# 设置输出文件名格式（避免前缀）
-set_target_properties(fix_crystallize_plugin PROPERTIES 
-                         CUDA_ARCHITECTURES "89"
-                         PREFIX "" SUFFIX ".so")
+# 显卡架构配置（建议由用户从命令行传入，如 -DCMAKE_CUDA_ARCHITECTURES=89）
+if(NOT CMAKE_CUDA_ARCHITECTURES)
+    set_target_properties(fix_crystallize_plugin PROPERTIES CUDA_ARCHITECTURES "89")
+endif()
+
+set_target_properties(fix_crystallize_plugin PROPERTIES PREFIX "" SUFFIX ".so")
